adjust the order of 'update' and 'insert'

--- a/src/main/resources/jdbc.properties
+++ b/src/main/resources/jdbc.properties
@@ -1,4 +1,4 @@
 jdbc.username=root
-jdbc.password=111222
-jdbc.driver=com.mysql.jdbc.Driver
-jdbc.url=jdbc:mysql:///seckill?useUnicode=true&characterEncoding=utf-8
+jdbc.password=root
+jdbc.driver=com.mysql.cj.jdbc.Driver
+jdbc.url=jdbc:mysql://132.232.241.210:3306/seckill?serverTimezone=GMT&useUnicode=true&characterEncoding=utf-8
