--- a/pom.xml
+++ b/pom.xml
@@ -65,14 +65,15 @@
       <artifactId>logback-classic</artifactId>
       <version>1.1.1</version>
     </dependency>
-
-    <!--1.数据库相关依赖-->
     <dependency>
       <groupId>mysql</groupId>
       <artifactId>mysql-connector-java</artifactId>
-      <version>5.1.37</version>
-      <scope>runtime</scope>
+      <version>8.0.15</version>
     </dependency>
+
+
+    <!--1.数据库相关依赖-->
+
     <dependency>
       <groupId>c3p0</groupId>
       <artifactId>c3p0</artifactId>
@@ -178,6 +179,12 @@
       <artifactId>protostuff-runtime</artifactId>
       <version>1.0.8</version>
     </dependency>
+      <dependency>
+          <groupId>org.jetbrains</groupId>
+          <artifactId>annotations-java5</artifactId>
+          <version>RELEASE</version>
+          <scope>compile</scope>
+      </dependency>
 
   </dependencies>
 
